k8s/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sample-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sample
spec:
  hosts:
  - "*"
  gateways:
  - sample-gateway
  http:
  - match:
    - uri:
        prefix: /item
    route:
    - destination:
        host: sample-gw
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sample-web-route
spec:
  hosts:
  - sample-web
  http:
  - route:
    - destination:
        host: sample-web
        subset: v1
      weight: 50
    - destination:
        host: sample-web
        subset: v2
      weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sample-api-route
spec:
  hosts:
  - sample-api
  http:
  - route:
    - destination:
        host: sample-api
        subset: v1
      weight: 0
    - destination:
        host: sample-api
        subset: v2
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sample-gw
spec:
  host: sample-gw
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sample-web
spec:
  host: sample-web
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sample-api
spec:
  host: sample-api
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sample-task
spec:
  host: sample-task
  subsets:
  - name: v1
    labels:
      version: v1
